[package]
name = "bbs"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
thrussh = "0.32.5"
thrussh-keys = "0.20.2"
futures = "0.3.12"
anyhow = "1.0.38"
array2d = "0.2.1"
sqlite = "0.25.3"
toml = "0.5.8"
serde = "1.0.123"
serde_derive = "1.0.123"
rand = "0.8.3"
sha2 = "0.9.2"